# websocks

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  client.py  example.yml  httpserver.py  pyproject.toml  requirements.txt  server.py  setup.py  test.py  websocks.vbs
.github/workflows/: setup.yml
tests/: test_client.py  test_config.py  test_rule.py  test_socks5.py
websocks/: __init__.py  __main__.py  _websocks.py  algorithm.py  client.py  cn-ip.txt  commands.py  config.py  exceptions.py  gfwlist.txt  gui.py  rule.py  server.py  socket.py  template.yaml  types.py  utils.py  whitelist.txt
websocks/systems/: __init__.py
