[tool.poetry]
authors = ["abersheeran <me@abersheeran.com>"]
description = "A websocket-based socks5 proxy."
license = "MIT"
name = "websocks"
readme = "README.md"
version = "0.4.4"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
]
documentation = "https://github.com/abersheeran/websocks/wiki"
homepage = "https://github.com/abersheeran/websocks"
repository = "https://github.com/abersheeran/websocks"

packages = [
  {include = "websocks"},
]

[tool.poetry.scripts]
websocks = 'websocks.commands:main'
websocks-gui = 'websocks.gui:main'

[tool.poetry.dependencies]
python = "^3.7"

PySimpleGUIQt = {version = "^0.35.0", optional = true}
aiodns = "^2.0.0"
click = "^7.0"
h11 = "^0.12.0"
typing-extensions = {version = "^3.7.4.1", python = "<3.8"}
uvloop = {version = "*", markers = "sys_platform != 'win32' and sys_platform != 'cygwin' and platform_python_implementation != 'pypy'"}
websockets = "^8.1"

[tool.poetry.extras]
GUI = ["PySimpleGUIQt"]

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "*"
pysocks = "^1.7.1"
pytest = "^5.3.2"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
